# PPTemplate

./: .gitignore  LICENSE  Pipfile  README.md  generate.py  main.py  pyproject.toml  名札＿改.py
.github/workflows/: python-app.yml
pptemplate/: __main__.py  generate.py
