[project]
name = "pptemplate"
version = "1.1"
description = "template engine of PowerPoint"
authors = [
    {name = "777shuang",email = "shuang777@outlook.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-pptx (>=1.0.2,<2.0.0)",
    "tkeasygui (>=1.0.21,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nuitka (>=2.6.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"